--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,4 @@ importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(janitor,clean_names)
 importFrom(rlang,`!!`)
-importFrom(rlang,enquo)
+importFrom(rlang,quo)
